# galactic-dynamics

./: README.md  Taskfile.yaml  pyproject.toml  requirements.txt
simulation_1/: README.md
simulation_2/: README.md
src/galactic_dynamics/: main.py
src/galactic_dynamics/simulation_1/: README.md  main.py  plots.py
src/galactic_dynamics/simulation_2/: main.py
tests/: __init__.py  test_simulation_1.py
