[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "galactic_dynamics"
version = "0.1.0"
authors = [
  { name="Rodrigo", email="rsouza01@gmail.com" },
]
description = "This roadmap is designed to bridge the gap between abstract definitions and physical reality by using the Sun as our primary laboratory."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "astropy>=6.0.0",
]

[project.scripts]
galactic_dynamics  = "galactic_dynamics.main:main"

[tool.setuptools.packages.find]
where = ["src"]